@@ -1,0 +1,6 @@
+| 函数 | 作用 |
+| --- | --- |
+| synctmux | 同步操作的tmux |
+| nosynctmux | 独立操作的tmux |
+| loginTmux | 使用tmux 取代login shell |
+
